1.9
--------------------
o Predicates can now be returned and used to set properties

1.8
--------------------
o Added escape characters to string literals
o Renamed `RELATE` to `CREATE UNIQUE`

1.8.M06 (2012-07-06)
--------------------
o Fixes problem when graph elements are deleted multiple times in the same query
o Fixes #625: Values passed through WITH have the wrong type
o Fixes #654: Some paths are returned the wrong way

1.8.M05 (2012-06-21)
--------------------
o CREATE and RELATE can now introduce path identifiers
o Fixes #600: Double optional with no matching relationships returns too many rows
o Fixes #613: Missing dependencies not reported correctly for queries with RELATE/SET/DELETE
o String literals can now contain escape characters

1.8.M04 (2012-06-07)
--------------------
o CREATE now accepts full paths and not only single nodes and relationships
o Path patterns can now be used as expressions and as predicates
o Fixes bug where RELATE fails to compare array properties
o Fixes #573: Arithmetics operations have wrong type
o Fixes #567: Parameter maps coming through REST are not parsed correctly
o Fixes #563: COUNT(*) does not return 0 for empty result
o Fixes #561: RELATE doesn't work as expected with map-parameters
o Fixes problem with optional properties and collection predicates (ALL/ANY/NONE/SINGLE/IN)

1.8.M03 (2012-05-24)
--------------------
o Added RELATE
o Changed the CREATE syntax, so it looks more like RELATE
o Fixes #506: delete head(rels) doesn't work
o Fixes #508: length function on array properties doesn't work
o Fixes #512: start n=node(*) match n-[r?]->() delete n,r not working
o Fixes #514: Extract doesn't work with array properties
o Fixes #523: String literals not parsed correctly in CREATE statement
o Fixes #526: cypher filter in return clause
o Fixes #536: SQRT only returns an integer
o Fixes #543: Appending elements to collections

1.8.M02 (2012-05-11)
--------------------