@@ -1,6 +1,8 @@
 1.9
 --------------------
 o Predicates can now be returned and used to set properties
+o Fixes #797: CREATE UNIQUE now makes sure used identifiers have the same properties even if 
+  they are re-used without the properties
 
 1.8
 --------------------
